# Qyra

./: .gitignore  .prettierrc.json  README.md  eslint.config.js  index.html  keystore.jks  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-android-dev.yml  build-android.yml  build-cross-platform.yml  build-linux.yml  build-macos.yml  build-windows.yml  test.yml
docs/superpowers/plans/: 2026-05-23-multiple-tabs.md
docs/superpowers/specs/: 2026-05-23-multiple-tabs-design.md
e2e/: smoke.spec.ts
e2e/support/: fixtures.ts  mockInvoke.ts
kern-bridge/: Cargo.toml
kern-bridge/src/: lib.rs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  updater.key.pub
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: android_pdf.rs  annotate.rs  anonymize.rs  bates.rs  cache.rs  comments.rs  compress.rs  compress_gs.rs  create.rs  crop.rs  disk.rs  export_text.rs  export_word.rs  files.rs  flatten.rs  folder_pick.rs  form_data.rs  forms.rs  header_footer.rs  library.rs  links.rs  lopdf_cache.rs  merge.rs  metadata.rs  mod.rs  ocr.rs  outline.rs  outline_edit.rs  page_count.rs  page_numbers.rs  pdf_annotations.rs  protect.rs  redact.rs  redact_android_stub.rs  remove.rs  render.rs  render_worker.rs  reorder.rs  repair.rs  rotate.rs  (+5 more)
src-tauri/src/pdf/: error.rs  mod.rs  source.rs  types.rs
src-tauri/src/pdf/parser/: lexer.rs  mod.rs  object.rs  object_stream.rs  reader.rs  xref.rs
src-tauri/src/pdf/rewriter/: colorspace.rs  config.rs  dedup.rs  gc.rs  mod.rs  placement.rs  plan.rs  rewriter.rs  transforms.rs
src-tauri/src/pdf/writer/: mod.rs  serialize.rs  writer.rs
src-tauri/src/utils/: mod.rs  paths.rs  timing.rs
src-tauri/tests/: annotations.rs  bates.rs  comments.rs  gc.rs  header_footer.rs  links.rs  outline_edit.rs  page_numbers.rs  pages.rs  smoke.rs  split.rs  watermark.rs
src-tauri/tests/common/: mod.rs
src/components/: CommandPalette.tsx  DropZone.tsx  ErrorBanner.tsx  ErrorFallback.tsx  FileResult.tsx  Icons.tsx  PageGrid.tsx  ProgressBar.tsx  ShortcutsModal.tsx  ThemeToggle.tsx  ToolLayout.tsx  UpdateBanner.tsx
src/components/ui/: Dialog.tsx  DropdownMenu.tsx  Tooltip.tsx
src/hooks/: useMediaQuery.ts  useOpenWithFile.ts  usePageThumbnails.test.ts  usePageThumbnails.ts  usePdfCommand.ts  useUpdater.ts  useVisiblePages.ts
src/lib/: androidFileUtils.ts  cn.ts  lruCache.test.ts  lruCache.ts  ocrEngine.ts  pageRange.test.ts  pageRange.ts  queries.ts  schemas.ts  sessionCache.ts  settings.ts  tauri.test.ts  tauri.ts  tokens.ts  useTheme.ts
src/store/: useAppStore.ts  useCommentsStore.ts
src/test/: mockTauri.ts  renderWithProviders.tsx  setup.ts
src/tools/: BatchOps.tsx  Compress.tsx  Home.tsx  ImagesToPdf.tsx  Merge.tsx  Metadata.tsx  Ocr.tsx  PageNumbers.tsx  PdfToImages.tsx  Protect.test.tsx  Protect.tsx  RemovePages.test.tsx  RemovePages.tsx  ReorderPages.tsx  Rotate.tsx  Split.tsx  Unlock.test.tsx  Unlock.tsx
src/tools/home/: BottomTabBar.tsx  DropHero.tsx  LeftRail.tsx  RecentFiles.tsx  types.ts
src/tools/settings/: AboutSection.tsx  AppearanceSection.tsx  FilesSection.tsx  SessionSection.tsx  UpdatesSection.tsx  ui.tsx
src/viewer/: AnnotationLayer.tsx  AnnotationToolbar.tsx  CommentLayer.tsx  CommentPanel.tsx  CompareView.tsx  DrawingCanvas.tsx  FindBar.tsx  FormLayer.tsx  LinkLayer.tsx  PageCanvas.tsx  PageStrip.tsx  PanelOutput.tsx  PresentationMode.tsx  RedactLayer.tsx  ScrollPageIndicator.tsx  SignatureLayer.tsx  TabBar.tsx  TextLayer.tsx  ToolSidebar.tsx  Viewer.tsx  ViewerShell.tsx  VirtualPageBackground.tsx  ZoomFab.tsx  icons.tsx  useFormFilling.ts  usePanelCommand.ts  zoom.test.ts  zoom.ts
src/viewer/components/: LabeledInput.tsx  StatusBox.tsx  ToggleGroup.tsx  ToolPanelLayout.tsx
src/viewer/hooks/: useAutoSave.ts  useComments.ts  useFindInDocument.ts  useGoToPage.ts  useRedactRegions.ts  useSignatures.ts  useTextSelection.ts  useToolMode.ts  useViewerUI.ts
src/viewer/render/: pageBitmap.test.ts  pageBitmap.ts
src/viewer/tools/: AnonymizePanel.tsx  BatesPanel.tsx  ComparePanel.tsx  CompressPanel.tsx  CropPanel.tsx  DrawPanel.tsx  DrawToolbar.tsx  ExportAnnotationsPanel.tsx  ExportImagesPanel.tsx  ExportTextPanel.tsx  ExportWordPanel.tsx  FlattenPanel.tsx  FormDataPanel.tsx  HeaderFooterPanel.tsx  LinksPanel.tsx  MetadataPanel.tsx  PageNumbersPanel.tsx  PrintPanel.tsx  ProtectPanel.tsx  RedactPanel.tsx  RemovePanel.tsx  ReorderPanel.tsx  RotatePanel.tsx  SignaturePanel.tsx  SplitPanel.tsx  StampsPanel.tsx  UnlockPanel.tsx  WatermarkPanel.tsx
tests/fixtures/: generate.mjs
