[package]
name = "qyra"
version = "0.1.0"
description = "The free, offline, open-source PDF Swiss Army Knife"
authors = ["you"]
edition = "2021"

[lib]
name = "qyra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.40"
flate2 = "1"
printpdf = "0.7"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
tokio = { version = "1", features = ["full"] }
rayon = "1"
tempfile = "3"
base64 = "0.22"
thiserror = "1"
sysinfo = { version = "0.33", default-features = false, features = ["disk"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Updater and MuPDF only make sense on desktop (no app-store update flow on Android,
# and mupdf-sys fails to cross-compile for Android from Windows).
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-updater = "2"
mupdf = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
ndk-context = "0.1"

