[package]
name = "qyra"
version = "0.1.0"
description = "The free, offline, open-source PDF Swiss Army Knife"
authors = ["you"]
edition = "2021"

[lib]
name = "qyra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Integration tests (src-tauri/tests/) are a separate crate, so they need their
# own copies of anything they touch. Versions MUST match the [dependencies]
# entries so types shared across the boundary (e.g. lopdf::Document) line up.
[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tempfile = "3"
lopdf = "0.40"
mupdf = "0.6"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.40"
rand = "0.10"
flate2 = "1"
printpdf = "0.7"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
rayon = "1"
tempfile = "3"
base64 = "0.22"
thiserror = "1"
sysinfo = { version = "0.33", default-features = false, features = ["disk"] }
rusqlite = { version = "0.31", features = ["bundled"] }
docx-rs = "0.4"
quick-xml = "0.36"
mupdf = "0.6"

# Updater only makes sense on desktop (Play Store handles app-store updates on Android).
# mupdf-sys 0.6.0 ships wrapper/context.c which #includes "androidfonts.c" on Android
# but forgets to ship that file. The CI workflow drops a stub androidfonts.c into the
# fetched crate before `cargo build` so the C side links.
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
ndk-context = "0.1"
libc = "0.2"

# libc on unix desktop for nice() in compress_gs.rs lower_priority.
[target.'cfg(all(unix, not(target_os = "android")))'.dependencies]
libc = "0.2"

# ── Build profiles ────────────────────────────────────────────────────────────
# Release: maximize runtime speed of the Rust+C hot paths — MuPDF render, image
# JPEG encode, the pdf parser/rewriter, lopdf split/merge. thin-LTO + a single
# codegen unit trade compile time for ~10-25% faster binaries; strip shrinks it.
# NOTE: panic = "abort" is deliberately NOT set — command handlers rely on
# spawn_blocking catching task panics and returning them as AppError (JoinError).
# panic=abort would turn a caught render panic into a whole-app crash.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Dev: keep OUR crate fast to compile and fully debuggable (opt-level 1 retains
# line info), but compile every DEPENDENCY at opt-level 3 so the heavy stack
# (MuPDF C via cc, image, flate2, lopdf, mupdf) runs release-grade under
# `cargo tauri dev`. This is the single biggest fix for "everything is sluggish
# in dev" — debug-mode MuPDF/image is 10-50x slower than optimized.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

